Fixed scaling on linked interactive previews so that it is readable

--- a/src/style/components/select-interactive-state-dialog.styl
+++ b/src/style/components/select-interactive-state-dialog.styl
@@ -124,6 +124,13 @@
     transform-origin: left top
     border: solid 1px
 
+  iframe.preview-iframe-fullsize
+    width: 100% !important
+    height: 100% !important
+    transform: scale3d(1, 1, 1)
+    transform-origin: left top
+    border: solid 1px
+
   .scroll-wrapper
     overflow: hidden
 
